# modelsafe

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt
data/: known_threats.json
experiments/: scan_known_models.py
modelsafe/: __init__.py  activation_scan.py  cve_correlator.py  provenance.py  report.py  scanner.py  threat_db.py  weight_analysis.py
tests/: __init__.py  test_cve_correlator.py  test_provenance.py  test_scanner.py  test_weight_analysis.py
